--- a/x-pack/plugins/fleet/common/openapi/bundled.yaml
+++ b/x-pack/plugins/fleet/common/openapi/bundled.yaml
@@ -1,4 +1,5 @@
 openapi: 3.0.0
+tags: []
 info:
   title: Fleet
   description: OpenAPI schema for Fleet API endpoints
@@ -11,9 +12,6 @@ info:
 servers:
   - url: http://KIBANA_HOST:5601/api/fleet
     description: Public and supported Fleet API
-security:
-  - basicAuth: []
-tags: []
 paths:
   /health_check:
     post:
@@ -132,7 +130,10 @@ paths:
           required: false
           schema:
             type: string
-          description: An agent policy ID to scope the enrollment settings to. For example, that policy's Fleet Server host, its proxy, download location, etc. If not provided, the default Fleet Server policy is used (if any).
+          description: >-
+            An agent policy ID to scope the enrollment settings to. For example,
+            that policy's Fleet Server host, its proxy, download location, etc.
+            If not provided, the default Fleet Server policy is used (if any).
       responses:
         '200':
           description: OK
@@ -207,7 +208,9 @@ paths:
                       id:
                         type: string
                         nullable: true
-                        description: The key ID of the GPG key used to verify package signatures
+                        description: >-
+                          the key ID of the GPG key used to verify package
+                          signatures
                   statusCode:
                     type: number
                   headers:
@@ -270,7 +273,9 @@ paths:
         schema:
           type: boolean
           default: false
-        description: Whether to include prerelease packages in categories count (e.g. beta, rc, preview)
+        description: >-
+          Whether to include prerelease packages in categories count (e.g. beta,
+          rc, preview)
       - in: query
         name: experimental
         deprecated: true
@@ -324,13 +329,20 @@ paths:
           schema:
             type: boolean
             default: false
-          description: Whether to exclude the install status of each package. Enabling this option will opt in to caching for the response via `cache-control` headers. If you don't need up-to-date installation info for a package, and are querying for a list of available packages, providing this flag can improve performance substantially.
+          description: >-
+            Whether to exclude the install status of each package. Enabling this
+            option will opt in to caching for the response via `cache-control`
+            headers. If you don't need up-to-date installation info for a
+            package, and are querying for a list of available packages,
+            providing this flag can improve performance substantially.
         - in: query
           name: prerelease
           schema:
             type: boolean
             default: false
-          description: Whether to return prerelease versions of packages (e.g. beta, rc, preview)
+          description: >-
+            Whether to return prerelease versions of packages (e.g. beta, rc,
+            preview)
         - in: query
           name: experimental
           deprecated: true
@@ -395,7 +407,9 @@ paths:
           schema:
             type: boolean
             default: false
-          description: Skip data stream rollover during index template mapping or settings update
+          description: >-
+            Skip data stream rollover during index template mapping or settings
+            update
       requestBody:
         content:
           application/zip:
@@ -427,7 +441,9 @@ paths:
           schema:
             type: boolean
             default: false
-          description: Whether to return prerelease versions of packages (e.g. beta, rc, preview)
+          description: >-
+            Whether to return prerelease versions of packages (e.g. beta, rc,
+            preview)
       requestBody:
         content:
           application/json:
@@ -499,7 +515,9 @@ paths:
           schema:
             type: boolean
             default: false
-          description: Whether to return prerelease versions of packages (e.g. beta, rc, preview)
+          description: >-
+            Whether to return prerelease versions of packages (e.g. beta, rc,
+            preview)
       deprecated: true
     post:
       summary: Install package
@@ -551,7 +569,9 @@ paths:
           schema:
             type: boolean
             default: false
-          description: Skip data stream rollover during index template mapping or settings update
+          description: >-
+            Skip data stream rollover during index template mapping or settings
+            update
       requestBody:
         content:
           application/json:
@@ -670,14 +690,18 @@ paths:
       - schema:
           type: boolean
         name: full
-        description: Return all fields from the package manifest, not just those supported by the Elastic Package Registry
+        description: >-
+          Return all fields from the package manifest, not just those supported
+          by the Elastic Package Registry
         in: query
       - in: query
         name: prerelease
         schema:
           type: boolean
           default: false
-        description: Whether to return prerelease versions of packages (e.g. beta, rc, preview)
+        description: >-
+          Whether to return prerelease versions of packages (e.g. beta, rc,
+          preview)
     post:
       summary: Install package
       tags:
@@ -732,7 +756,9 @@ paths:
           schema:
             type: boolean
             default: false
-          description: Skip data stream rollover during index template mapping or settings update
+          description: >-
+            Skip data stream rollover during index template mapping or settings
+            update
       requestBody:
         content:
           application/json:
@@ -880,7 +906,9 @@ paths:
           schema:
             type: boolean
             default: false
-          description: Whether to include prerelease packages in categories count (e.g. beta, rc, preview)
+          description: >-
+            Whether to include prerelease packages in categories count (e.g.
+            beta, rc, preview)
       requestBody:
         content:
           application/json:
@@ -1374,7 +1402,9 @@ paths:
                           description: creation time of action
                         latestErrors:
                           type: array
-                          description: latest errors that happened when the agents executed the action
+                          description: >-
+                            latest errors that happened when the agents executed
+                            the action
                           items:
                             type: object
                             properties:
@@ -1871,7 +1901,9 @@ paths:
                   description: Unenrolls hosted agents too
                 includeInactive:
                   type: boolean
-                  description: When passing agents by KQL query, unenrolls inactive agents too
+                  description: >-
+                    When passing agents by KQL query, unenrolls inactive agents
+                    too
               required:
                 - agents
             example:
@@ -2074,12 +2106,18 @@ paths:
             type: boolean
           in: query
           name: full
-          description: When set to true, retrieve the related package policies for each agent policy.
+          description: >-
+            When set to true, retrieve the related package policies for each
+            agent policy.
         - schema:
             type: boolean
           in: query
           name: noAgentCount
-          description: When set to true, do not count how many agents are in the agent policy, this can improve performance if you are searching over a large number of agent policies. The "agents" property will always be 0 if set to true.
+          description: >-
+            When set to true, do not count how many agents are in the agent
+            policy, this can improve performance if you are searching over a
+            large number of agent policies. The "agents" property will always be
+            0 if set to true.
       description: ''
     post:
       summary: Create agent policy
@@ -2659,7 +2697,9 @@ paths:
         '409':
           $ref: '#/components/responses/error'
       requestBody:
-        description: You should use inputs as an object and not use the deprecated inputs array.
+        description: >-
+          You should use inputs as an object and not use the deprecated inputs
+          array.
         content:
           application/json:
             schema:
@@ -3284,7 +3324,9 @@ paths:
                 is_internal:
                   type: boolean
                 proxy_id:
-                  description: The ID of the proxy to use for this fleet server host. See the proxies API for more information.
+                  description: >-
+                    The ID of the proxy to use for this fleet server host. See
+                    the proxies API for more information.
                   type: string
                 host_urls:
                   type: array
@@ -3359,7 +3401,9 @@ paths:
                 is_internal:
                   type: boolean
                 proxy_id:
-                  description: The ID of the proxy to use for this fleet server host. See the proxies API for more information.
+                  description: >-
+                    The ID of the proxy to use for this fleet server host. See
+                    the proxies API for more information.
                   type: string
                   nullable: true
                 host_urls:
@@ -3877,7 +3921,9 @@ components:
         host:
           type: string
         proxy_id:
-          description: The ID of the proxy to use for this download source. See the proxies API for more information.
+          description: >-
+            The ID of the proxy to use for this download source. See the proxies
+            API for more information.
           type: string
           nullable: true
       required:
@@ -4262,7 +4308,9 @@ components:
         release:
           type: string
           deprecated: true
-          description: release label is deprecated, derive from the version instead (packages follow semver)
+          description: >-
+            release label is deprecated, derive from the version instead
+            (packages follow semver)
           enum:
             - experimental
             - beta
@@ -4541,7 +4589,9 @@ components:
           properties:
             cpu_avg:
               type: number
-              description: Average agent CPU usage during the last 5 minutes, number between 0-1
+              description: >-
+                Average agent CPU usage during the last 5 minutes, number
+                between 0-1
             memory_size_byte_avg:
               type: number
               description: Average agent memory consumption during the last 5 minutes
@@ -4813,7 +4863,9 @@ components:
               - metrics
               - logs
         keep_monitoring_alive:
-          description: When set to true, monitoring will be enabled but logs/metrics collection will be disabled
+          description: >-
+            When set to true, monitoring will be enabled but logs/metrics
+            collection will be disabled
           type: boolean
           nullable: true
         data_output_id:
@@ -4833,7 +4885,10 @@ components:
         inactivity_timeout:
           type: integer
         package_policies:
-          description: This field is present only when retrieving a single agent policy, or when retrieving a list of agent policies with the ?full=true parameter
+          description: >-
+            This field is present only when retrieving a single agent policy, or
+            when retrieving a list of agent policies with the ?full=true
+            parameter
           type: array
           items:
             $ref: '#/components/schemas/package_policy'
@@ -4861,19 +4916,28 @@ components:
               - name
               - enabled
         is_protected:
-          description: Indicates whether the agent policy has tamper protection enabled. Default false.
+          description: >-
+            Indicates whether the agent policy has tamper protection enabled.
+            Default false.
           type: boolean
         overrides:
           type: object
-          description: Override settings that are defined in the agent policy. Input settings cannot be overridden. The override option should be used only in unusual circumstances and not as a routine procedure.
+          description: >-
+            Override settings that are defined in the agent policy. Input
+            settings cannot be overridden. The override option should be used
+            only in unusual circumstances and not as a routine procedure.
           nullable: true
         advanced_settings:
           type: object
-          description: Advanced settings stored in the agent policy, e.g. agent_limits_go_max_procs
+          description: >-
+            Advanced settings stored in the agent policy, e.g.
+            agent_limits_go_max_procs
           nullable: true
         supports_agentless:
           type: boolean
-          description: Indicates whether the agent policy supports agentless integrations. Only allowed in a serverless environment.
+          description: >-
+            Indicates whether the agent policy supports agentless integrations.
+            Only allowed in a serverless environment.
         global_data_tags:
           type: array
           items:
@@ -4882,7 +4946,9 @@ components:
               oneOf:
                 - type: string
                 - type: number
-            description: User defined data tags that are added to all of the inputs. The values can be strings or numbers.
+            description: >-
+              User defined data tags that are added to all of the inputs. The
+              values can be strings or numbers.
       required:
         - id
         - status
@@ -4948,7 +5014,9 @@ components:
               oneOf:
                 - type: string
                 - type: number
-            description: User defined data tags that are added to all of the inputs. The values can be strings or numbers.
+            description: >-
+              User defined data tags that are added to all of the inputs. The
+              values can be strings or numbers.
       required:
         - name
         - namespace
@@ -5215,7 +5283,9 @@ components:
           example: my description
         namespace:
           type: string
-          description: The package policy namespace. Leave blank to inherit the agent policy's namespace.
+          description: >-
+            The package policy namespace. Leave blank to inherit the agent
+            policy's namespace.
           example: customnamespace
         policy_id:
           type: string
@@ -5237,10 +5307,14 @@ components:
             - version
         vars:
           type: object
-          description: Package root level variable (see integration documentation for more information)
+          description: >-
+            Package root level variable (see integration documentation for more
+            information)
         inputs:
           type: object
-          description: Package policy inputs (see integration documentation to know what inputs are available)
+          description: >-
+            Package policy inputs (see integration documentation to know what
+            inputs are available)
           example:
             nginx-logfile:
               enabled: true
@@ -5262,10 +5336,14 @@ components:
                 description: enable or disable that input, (default to true)
               vars:
                 type: object
-                description: Input level variable (see integration documentation for more information)
+                description: >-
+                  Input level variable (see integration documentation for more
+                  information)
               streams:
                 type: object
-                description: Input streams (see integration documentation to know what streams are available)
+                description: >-
+                  Input streams (see integration documentation to know what
+                  streams are available)
                 additionalProperties:
                   type: object
                   properties:
@@ -5274,17 +5352,24 @@ components:
                       description: enable or disable that stream, (default to true)
                     vars:
                       type: object
-                      description: Stream level variable (see integration documentation for more information)
+                      description: >-
+                        Stream level variable (see integration documentation for
+                        more information)
         overrides:
           type: object
           properties:
             inputs:
               type: object
-          description: Override settings that are defined in the package policy. The override option should be used only in unusual circumstances and not as a routine procedure.
+          description: >-
+            Override settings that are defined in the package policy. The
+            override option should be used only in unusual circumstances and not
+            as a routine procedure.
           nullable: true
         force:
           type: boolean
-          description: Force package policy creation even if package is not verified, or if the agent policy is managed.
+          description: >-
+            Force package policy creation even if package is not verified, or if
+            the agent policy is managed.
       required:
         - name
         - policy_id
@@ -5575,7 +5660,9 @@ components:
                 type: string
               when:
                 deprecated: true
-                description: Deprecated, kafka output do not support conditionnal topics anymore.
+                description: >-
+                  Deprecated, kafka output do not support conditionnal topics
+                  anymore.
                 type: object
                 properties:
                   type:
@@ -5920,7 +6007,9 @@ components:
                 type: string
               when:
                 deprecated: true
-                description: Deprecated, kafka output do not support conditionnal topics anymore.
+                description: >-
+                  Deprecated, kafka output do not support conditionnal topics
+                  anymore.
                 type: object
                 properties:
                   type:
@@ -6018,3 +6107,5 @@ components:
           elasticsearch: '#/components/schemas/output_update_request_elasticsearch'
           kafka: '#/components/schemas/output_update_request_kafka'
           logstash: '#/components/schemas/output_update_request_logstash'
+security:
+  - basicAuth: []
