--- a/package.json
+++ b/package.json
@@ -968,7 +968,7 @@
     "byte-size": "^8.1.0",
     "camelcase-keys": "7.0.2",
     "canvg": "^3.0.9",
-    "cbor-x": "^1.3.3",
+    "cbor": "^9.0.2",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.12",
     "chroma-js": "^2.1.0",
