--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -6580,7 +6580,7 @@ paths:
         - APM annotations
   /api/asset_criticality:
     delete:
-      description: Delete the asset criticality record for a specific entity.
+      description: Delete the asset criticality record for a specific asset if it exists.
       operationId: DeleteAssetCriticalityRecord
       parameters:
         - description: The ID value of the asset.
@@ -6626,11 +6626,11 @@ paths:
           description: Successful response
         '400':
           description: Invalid request
-      summary: Delete an asset criticality record
+      summary: Delete Criticality Record
       tags:
         - Security Solution Entity Analytics API
     get:
-      description: Get the asset criticality record for a specific entity.
+      description: Get the criticality record for a specific asset.
       operationId: GetAssetCriticalityRecord
       parameters:
         - description: The ID value of the asset.
@@ -6659,17 +6659,11 @@ paths:
           description: Invalid request
         '404':
           description: Criticality record not found
-      summary: Get an asset criticality record
+      summary: Get Criticality Record
       tags:
         - Security Solution Entity Analytics API
     post:
-      description: >
-        Create or update an asset criticality record for a specific entity.
-
-
-        If a record already exists for the specified entity, that record is
-        overwritten with the specified value. If a record doesn't exist for the
-        specified entity, a new record is created.
+      description: Create or update a criticality record for a specific asset.
       operationId: CreateAssetCriticalityRecord
       requestBody:
         content:
@@ -6698,19 +6692,14 @@ paths:
           description: Successful response
         '400':
           description: Invalid request
-      summary: Upsert an asset criticality record
+      summary: Upsert Criticality Record
       tags:
         - Security Solution Entity Analytics API
   /api/asset_criticality/bulk:
     post:
-      description: >
-        Bulk upsert up to 1000 asset criticality records.
-
-
-        If asset criticality records already exist for the specified entities,
-        those records are overwritten with the specified values. If asset
-        criticality records don't exist for the specified entities, new records
-        are created.
+      description: >-
+        Bulk upsert up to 1000 asset criticality records, creating or updating
+        them as needed.
       operationId: BulkUpsertAssetCriticalityRecords
       requestBody:
         content:
@@ -6764,7 +6753,7 @@ paths:
           description: Bulk upload successful
         '413':
           description: File too large
-      summary: Bulk upsert asset criticality records
+      summary: Bulk Upsert Asset Criticality Records
       tags:
         - Security Solution Entity Analytics API
   /api/asset_criticality/list:
@@ -6841,7 +6830,7 @@ paths:
                   - per_page
                   - total
           description: Bulk upload successful
-      summary: List asset criticality records
+      summary: List Asset Criticality Records
       tags:
         - Security Solution Entity Analytics API
   /api/cases:
@@ -18861,10 +18850,6 @@ paths:
         - 'access:securitySolution'
   /api/risk_score/engine/schedule_now:
     post:
-      description: >-
-        Schedule the risk scoring engine to run as soon as possible. You can use
-        this to recalculate entity risk scores after updating their asset
-        criticality.
       operationId: ScheduleRiskEngineNow
       requestBody:
         content:
@@ -18891,7 +18876,7 @@ paths:
                 $ref: >-
                   #/components/schemas/Security_Solution_Entity_Analytics_API_RiskEngineScheduleNowErrorResponse
           description: Unexpected error
-      summary: Run the risk scoring engine
+      summary: Schedule the risk engine to run as soon as possible
       tags:
         - Security Solution Entity Analytics API
   /api/saved_objects/_bulk_create:
